# trac_ik1

devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: ada_description.pc  ada_launch.pc  trac_ik_examples.pc  trac_ik_lib.pc
devel/lib/trac_ik_examples/: ik_tests
devel/share/ada_description/cmake/: ada_descriptionConfig.cmake
devel/share/ada_launch/cmake/: ada_launchConfig.cmake
devel/share/trac_ik_examples/cmake/: trac_ik_examplesConfig.cmake
devel/share/trac_ik_lib/cmake/: trac_ik_libConfig.cmake
src/ada_description/: CMakeLists_updated.txt
src/ada_description/ordata/robots/: mico-modified.robot.xml
src/ada_description/robots/: mico-modified.xml  pr2.urdf
src/ada_launch/config/: controllers.yaml
src/ada_launch/launch/: BMI.launch  cartesian_teleop.launch  default.launch  default_control.launch  default_control2d.launch  default_mico.launch
src/trac_ik_examples/launch/: cartesian_teleop.launch
src/trac_ik_examples/src/: ik_tests.cpp  ik_tests_upload.cpp
src/trac_ik_lib/: CMakeLists.txt~
src/trac_ik_lib/src/: nlopt_ik.cpp  trac_ik.cpp
trac_ik_trajectories/: CMakeLists.txt  package.xml
trac_ik_trajectories/include/trac_ik_trajectories/: cartesian_trajectories.hpp
trac_ik_trajectories/src/: cartesian_trajectories.cpp
