<?xml version='1.0' encoding='ASCII'?>
<package>
  <name>trac_ik_trajectories</name>
  <version>1.3.6</version>

  <description>Cartesian trajectories using TRAC-IK</description>

  <maintainer email="pbeeson@traclabs.com">Patrick Beeson</maintainer>
  <author>Patrick Beeson</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>trac_ik_lib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>trac_ik_lib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>eigen_conversions</run_depend>

</package>
